--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -4,7 +4,8 @@
 @import "layouts/images";
 html{
     overflow: none !important;
-    
+    overflow-x: hidden !important;
+
 }
 
 body{
